// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseStudies should render correctly 1`] = `
<div>
  <section
    class="case-studies"
    id="case-studies"
  >
    <div
      class="container"
    >
      <div>
        <h2
          class="case-studies__main-title case-studies__main-title-index"
        >
          
        Case 
          <!---->
          
        Studies
      
        </h2>
         
        <!---->
      </div>
       
      <div
        class="projects"
      >
        <nuxtlink
          class="single-project"
          style="background: rgb(248, 247, 246);"
          target="_self"
          to="/case-studies/namba-food/"
        >
          <div
            class="single-project__container single-project_black-letters-theme"
          >
            <div
              class="single-project__content-wrap"
            >
              <img
                alt="Namba Food Contactless Delivery Service\`s Logo."
                class="img_lazy single-project__logo"
                data-src="[object Object]"
                height="41"
                width="104"
              />
               
              <h3
                class="single-project__sub-title"
              >
                Contactless Delivery Service
              </h3>
               
              <p
                class="single-project__paragraph paragraph"
              >
                
        Mad Devs created the Namba Food delivery service from scratch. The solution orchestrates feature-rich apps for couriers, end-users, and business owners.
      
              </p>
               
              <div
                class="contribution-widget"
              >
                <img
                  alt="Mad Devs logo"
                  class="contribution-widget__img img_lazy"
                  data-src="[object Object]"
                  height="18"
                  width="20"
                />
                 
                <span
                  class="contribution-widget__content contribution-widget__content_nambafood"
                >
                  
          contribution: Backend, Infrastructure, Frontend
        
                </span>
              </div>
            </div>
             
            <div
              class="single-project__background single-project__nambafoodBackground"
            >
              <picture>
                <source
                  class="multi-image"
                  data-srcset="[object Object] ,[object Object] 2x"
                  type="image/webp"
                />
                 
                <img
                  alt="Namba Food Contactless Delivery Service\`s Logo."
                  class="img_lazy"
                  data-src="[object Object]"
                  data-srcset="[object Object] 2x"
                  height="294"
                  width="610"
                />
              </picture>
            </div>
          </div>
        </nuxtlink>
        <nuxtlink
          class="single-project"
          style="background: rgb(34, 31, 32);"
          target="_self"
          to="/case-studies/sir-john-monash-centre/"
        >
          <div
            class="single-project__container single-project_white-letters-theme"
          >
            <div
              class="single-project__content-wrap"
            >
              <img
                alt="General John Monash The Australian War Memorial\`s Logo."
                class="img_lazy single-project__logo"
                data-src="[object Object]"
                height="41"
                width="91.5"
              />
               
              <h3
                class="single-project__sub-title"
              >
                Australian National Interpretive Centre
              </h3>
               
              <p
                class="single-project__paragraph paragraph"
              >
                
        Mad Devs engineers helped Sir John Monash Centre to enhance and maintain the BYOD multimedia technology.
      
              </p>
               
              <div
                class="contribution-widget"
              >
                <img
                  alt="Mad Devs logo"
                  class="contribution-widget__img img_lazy"
                  data-src="[object Object]"
                  height="18"
                  width="20"
                />
                 
                <span
                  class="contribution-widget__content contribution-widget__content_sjmc"
                >
                  
          contribution: Backend, Infrastructure, Frontend
        
                </span>
              </div>
            </div>
             
            <div
              class="single-project__background single-project__sjmcBackground"
            >
              <picture>
                <source
                  class="multi-image"
                  data-srcset="[object Object] ,[object Object] 2x"
                  type="image/webp"
                />
                 
                <img
                  alt="General John Monash The Australian War Memorial\`s Logo."
                  class="img_lazy"
                  data-src="[object Object]"
                  data-srcset="[object Object] 2x"
                  height="294"
                  width="610"
                />
              </picture>
            </div>
          </div>
        </nuxtlink>
        <nuxtlink
          class="single-project"
          style="background: rgb(34, 31, 32);"
          target="_self"
          to="/case-studies/yourcast/"
        >
          <div
            class="single-project__container single-project_white-letters-theme"
          >
            <div
              class="single-project__content-wrap"
            >
              <img
                alt="Yourcast.TV Logo."
                class="img_lazy single-project__logo"
                data-src="[object Object]"
                height="41"
                width="158"
              />
               
              <h3
                class="single-project__sub-title"
              >
                The Evolution 
                <br />
                 of Yourcast.TV
              </h3>
               
              <p
                class="single-project__paragraph paragraph"
              >
                
        Mad Devs developed a secure and private video streaming service and live video broadcasting cinema to provide entertainment experience to isolated groups feeling homesick.
      
              </p>
               
              <div
                class="contribution-widget"
              >
                <img
                  alt="Mad Devs logo"
                  class="contribution-widget__img img_lazy"
                  data-src="[object Object]"
                  height="18"
                  width="20"
                />
                 
                <span
                  class="contribution-widget__content contribution-widget__content_yourcast"
                >
                  
          contribution: Backend, Infrastructure, Frontend
        
                </span>
              </div>
            </div>
             
            <div
              class="single-project__background single-project__yourcastBackground"
            >
              <picture>
                <source
                  class="multi-image"
                  data-srcset="[object Object] ,[object Object] 2x"
                  type="image/webp"
                />
                 
                <img
                  alt="Yourcast.TV Logo."
                  class="img_lazy"
                  data-src="[object Object]"
                  data-srcset="[object Object] 2x"
                  height="294"
                  width="610"
                />
              </picture>
            </div>
          </div>
        </nuxtlink>
        <nuxtlink
          class="single-project"
          style="background: rgb(255, 106, 1);"
          target="_self"
          to="/case-studies/godee/"
        >
          <div
            class="single-project__container single-project_black-letters-theme"
          >
            <div
              class="single-project__content-wrap"
            >
              <img
                alt="GoDee Bus Transportation Services Logo."
                class="img_lazy single-project__logo"
                data-src="[object Object]"
                height="41"
                width="121"
              />
               
              <h3
                class="single-project__sub-title"
              >
                Convenient shuttle bus service
              </h3>
               
              <p
                class="single-project__paragraph paragraph"
              >
                
        Mad Devs helped GoDee with developing feature-rich software to re-invent public mobility by building new smart ways of a daily commute.
      
              </p>
               
              <div
                class="contribution-widget"
              >
                <img
                  alt="Mad Devs logo"
                  class="contribution-widget__img img_lazy"
                  data-src="[object Object]"
                  height="18"
                  width="20"
                />
                 
                <span
                  class="contribution-widget__content contribution-widget__content_godee"
                >
                  
          contribution: Backend, Infrastructure, Mobile Apps
        
                </span>
              </div>
            </div>
             
            <div
              class="single-project__background single-project__godeeBackground"
            >
              <picture>
                <source
                  class="multi-image"
                  data-srcset="[object Object] ,[object Object] 2x"
                  type="image/webp"
                />
                 
                <img
                  alt="GoDee Bus Transportation Services Logo."
                  class="img_lazy"
                  data-src="[object Object]"
                  data-srcset="[object Object] 2x"
                  height="294"
                  width="610"
                />
              </picture>
            </div>
          </div>
        </nuxtlink>
      </div>
    </div>
  </section>
</div>
`;

exports[`CaseStudies should render correctly with type=projects 1`] = `
<div>
  <section
    class="case-studies case-studies--projects"
    id="case-studies"
  >
    <div
      class="container"
    >
      <div>
        <h2
          class="case-studies__main-title case-studies__main-title-projects"
        >
          
        Case 
          <br />
          
        Studies
      
        </h2>
         
        <div
          class="case-studies__fire-icon"
        />
      </div>
       
      <div
        class="projects"
      >
        <nuxtlink
          class="single-project"
          style="background: rgb(248, 247, 246);"
          target="_self"
          to="/case-studies/namba-food/"
        >
          <div
            class="single-project__container single-project_black-letters-theme"
          >
            <div
              class="single-project__content-wrap"
            >
              <img
                alt="Namba Food Contactless Delivery Service\`s Logo."
                class="img_lazy single-project__logo"
                data-src="[object Object]"
                height="41"
                width="104"
              />
               
              <h3
                class="single-project__sub-title"
              >
                Contactless Delivery Service
              </h3>
               
              <p
                class="single-project__paragraph paragraph"
              >
                
        Mad Devs created the Namba Food delivery service from scratch. The solution orchestrates feature-rich apps for couriers, end-users, and business owners.
      
              </p>
               
              <div
                class="contribution-widget"
              >
                <img
                  alt="Mad Devs logo"
                  class="contribution-widget__img img_lazy"
                  data-src="[object Object]"
                  height="18"
                  width="20"
                />
                 
                <span
                  class="contribution-widget__content contribution-widget__content_nambafood"
                >
                  
          contribution: Backend, Infrastructure, Frontend
        
                </span>
              </div>
            </div>
             
            <div
              class="single-project__background single-project__nambafoodBackground"
            >
              <picture>
                <source
                  class="multi-image"
                  data-srcset="[object Object] ,[object Object] 2x"
                  type="image/webp"
                />
                 
                <img
                  alt="Namba Food Contactless Delivery Service\`s Logo."
                  class="img_lazy"
                  data-src="[object Object]"
                  data-srcset="[object Object] 2x"
                  height="294"
                  width="610"
                />
              </picture>
            </div>
          </div>
        </nuxtlink>
        <nuxtlink
          class="single-project"
          style="background: rgb(34, 31, 32);"
          target="_self"
          to="/case-studies/sir-john-monash-centre/"
        >
          <div
            class="single-project__container single-project_white-letters-theme"
          >
            <div
              class="single-project__content-wrap"
            >
              <img
                alt="General John Monash The Australian War Memorial\`s Logo."
                class="img_lazy single-project__logo"
                data-src="[object Object]"
                height="41"
                width="91.5"
              />
               
              <h3
                class="single-project__sub-title"
              >
                Australian National Interpretive Centre
              </h3>
               
              <p
                class="single-project__paragraph paragraph"
              >
                
        Mad Devs engineers helped Sir John Monash Centre to enhance and maintain the BYOD multimedia technology.
      
              </p>
               
              <div
                class="contribution-widget"
              >
                <img
                  alt="Mad Devs logo"
                  class="contribution-widget__img img_lazy"
                  data-src="[object Object]"
                  height="18"
                  width="20"
                />
                 
                <span
                  class="contribution-widget__content contribution-widget__content_sjmc"
                >
                  
          contribution: Backend, Infrastructure, Frontend
        
                </span>
              </div>
            </div>
             
            <div
              class="single-project__background single-project__sjmcBackground"
            >
              <picture>
                <source
                  class="multi-image"
                  data-srcset="[object Object] ,[object Object] 2x"
                  type="image/webp"
                />
                 
                <img
                  alt="General John Monash The Australian War Memorial\`s Logo."
                  class="img_lazy"
                  data-src="[object Object]"
                  data-srcset="[object Object] 2x"
                  height="294"
                  width="610"
                />
              </picture>
            </div>
          </div>
        </nuxtlink>
        <nuxtlink
          class="single-project"
          style="background: rgb(34, 31, 32);"
          target="_self"
          to="/case-studies/yourcast/"
        >
          <div
            class="single-project__container single-project_white-letters-theme"
          >
            <div
              class="single-project__content-wrap"
            >
              <img
                alt="Yourcast.TV Logo."
                class="img_lazy single-project__logo"
                data-src="[object Object]"
                height="41"
                width="158"
              />
               
              <h3
                class="single-project__sub-title"
              >
                The Evolution 
                <br />
                 of Yourcast.TV
              </h3>
               
              <p
                class="single-project__paragraph paragraph"
              >
                
        Mad Devs developed a secure and private video streaming service and live video broadcasting cinema to provide entertainment experience to isolated groups feeling homesick.
      
              </p>
               
              <div
                class="contribution-widget"
              >
                <img
                  alt="Mad Devs logo"
                  class="contribution-widget__img img_lazy"
                  data-src="[object Object]"
                  height="18"
                  width="20"
                />
                 
                <span
                  class="contribution-widget__content contribution-widget__content_yourcast"
                >
                  
          contribution: Backend, Infrastructure, Frontend
        
                </span>
              </div>
            </div>
             
            <div
              class="single-project__background single-project__yourcastBackground"
            >
              <picture>
                <source
                  class="multi-image"
                  data-srcset="[object Object] ,[object Object] 2x"
                  type="image/webp"
                />
                 
                <img
                  alt="Yourcast.TV Logo."
                  class="img_lazy"
                  data-src="[object Object]"
                  data-srcset="[object Object] 2x"
                  height="294"
                  width="610"
                />
              </picture>
            </div>
          </div>
        </nuxtlink>
        <nuxtlink
          class="single-project"
          style="background: rgb(255, 106, 1);"
          target="_self"
          to="/case-studies/godee/"
        >
          <div
            class="single-project__container single-project_black-letters-theme"
          >
            <div
              class="single-project__content-wrap"
            >
              <img
                alt="GoDee Bus Transportation Services Logo."
                class="img_lazy single-project__logo"
                data-src="[object Object]"
                height="41"
                width="121"
              />
               
              <h3
                class="single-project__sub-title"
              >
                Convenient shuttle bus service
              </h3>
               
              <p
                class="single-project__paragraph paragraph"
              >
                
        Mad Devs helped GoDee with developing feature-rich software to re-invent public mobility by building new smart ways of a daily commute.
      
              </p>
               
              <div
                class="contribution-widget"
              >
                <img
                  alt="Mad Devs logo"
                  class="contribution-widget__img img_lazy"
                  data-src="[object Object]"
                  height="18"
                  width="20"
                />
                 
                <span
                  class="contribution-widget__content contribution-widget__content_godee"
                >
                  
          contribution: Backend, Infrastructure, Mobile Apps
        
                </span>
              </div>
            </div>
             
            <div
              class="single-project__background single-project__godeeBackground"
            >
              <picture>
                <source
                  class="multi-image"
                  data-srcset="[object Object] ,[object Object] 2x"
                  type="image/webp"
                />
                 
                <img
                  alt="GoDee Bus Transportation Services Logo."
                  class="img_lazy"
                  data-src="[object Object]"
                  data-srcset="[object Object] 2x"
                  height="294"
                  width="610"
                />
              </picture>
            </div>
          </div>
        </nuxtlink>
      </div>
    </div>
  </section>
</div>
`;
